--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ code { font-family: 'Roboto Mono', monospace; background-color: var(--code-bg); 
 /* ======================================== */
 @media (max-width: 800px) {
     body {
-        padding: 0;
+        padding: 0 !important;
     }
 
     .main-container {
